src/pages/TimerPage/TimerPage.module.scss
@use "@/styles/helpers" as *;

@keyframes pulsar {
  0% {
    color: rgba(39, 174, 96, 0.7);
    text-shadow: 0 0 10px rgba(39, 174, 96, 0.3), 0 0 30px rgba(39, 174, 96, 0.2);
  }
  100% {
    color: rgba(39, 174, 96, 1);
    text-shadow: 0 0 10px rgba(39, 174, 96, 0.9), 0 0 40px rgba(39, 174, 96, 0.5);
  }
}

.timerPageWrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  font-family: var(--font-family-base), sans-serif;
  padding-top: 0;
  touch-action: none;
}

.scrambleHandler.scrambleHandler {
  min-height: 80px;
  padding: 10px 16px;
  display: flex;
  @include flex-center;
  font-size: fluid-to-laptop(30, 20);
  white-space: normal;
  word-break: break-word;
  text-align: center;
  border-radius: 10px;
  background-color: var(--color-surface-2);
  transition: background-color var(--transition-base), color var(--transition-base);
}

.buttonsWrapper.buttonsWrapper {
  display: flex;
  @include flex-center;
  margin-top: 10px;
}

.scrambleButtons.scrambleButtons {
  grid-template-columns: repeat(2, 1fr);
  column-gap: 10px;

  @media (width <= 530px) {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
    width: 100%;
    row-gap: 10px;
  }
}

.actionButton.actionButton {
  display: flex;
  @include flex-center;
  font-size: fluid(16, 13);
  width: fluid(230, 190);
  height: 30px;
  box-sizing: border-box;


  @media (width <= 530px) {
    font-size: 14px;
    width: 100%;
    height: fit-content;
  }
}

.timer {
  display: flex;
  @include flex-center;
  flex: 1;
  font-size: fluid(250, 70);
  font-variant-numeric: tabular-nums;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: 0 0 4px rgba(39, 174, 96, 0);
  transition: text-shadow var(--transition-base), color var(--transition-base);
  color: var(--colot-text-primary);
}

.timerReady {
  animation: pulsar 0.8s infinite alternate;
  transition: none;
}

